Better CSS organisation

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -52,6 +52,22 @@
 </nav>
 <!-- Navbar -->
 
+<!-- Gallery -->
+<div class="container gallery item-list">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-11">
+      <h1 class="title-gallery">Gallery</h1>
+      <div id="buttons"></div>
+      <img data-tags="3D Art" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
+      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
+      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
+      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
+      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
+    </div>
+  </div>
+</div>
+<!-- Gallery -->
+
 <!-- Footer -->
   <footer class="footer-content text-center">
     <div class="social-media">
