--- a/projects/index.html
+++ b/projects/index.html
@@ -53,33 +53,33 @@
 <!-- Navbar -->
 
 <!-- Project list -->
-<div class="container project-list">
+<div class="container project-list item-list">
   <div class="row justify-content-center">
     <div class="col-12 col-md-11">
       <h1 class="title-projects">My Projects</h1>
       <div id="buttons"></div>
       <div class="row projects-row">
-        <div class="col-12 col-md-4 project" data-tags="Coding">
+        <div class="col-12 col-md-4 project item" data-tags="Work in progress,Writing">
           <div class="card">
-            <img class="card-img-top" src=".../100px180/">
+            <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
             <div class="card-body">
-              <h5 class="card-title"><a href="#">Project 1</a></h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title"><a href="#">The Aroostook Witch</a></h5>
+              <p class="card-text">A Dark contemporary fantasy novel series about Astrid Reynarsdóttir, an Icelandic widow with occult powers, who solves strange cases in North Maine.</p>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-md-4 project" data-tags="Writing">
+        <div class="col-12 col-md-4 project item" data-tags="Work in progress,Coding">
           <div class="card">
-            <img class="card-img-top" src=".../100px180/">
+            <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
             <div class="card-body">
-              <h5 class="card-title"><a href="#">Project 2</a></h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title"><a href="#">Shiny TSV</a></h5>
+              <p class="card-text">App project for "3DS in Bordeaux". Matches TSV from Pokemon players and ESV from generated Pokemon eggs, in order to easily distribute shiny Pokemon eggs.</p>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-md-4 project" data-tags="Writing">
+        <!-- <div class="col-12 col-md-4 project" data-tags="Writing">
           <div class="card">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
@@ -117,9 +117,8 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
-
     </div>
   </div>
 </div>
