--- a/gallery/index.html
+++ b/gallery/index.html
@@ -58,11 +58,52 @@
     <div class="col-12 col-md-11">
       <h1 class="title-gallery">Gallery</h1>
       <div id="buttons"></div>
-      <img data-tags="3D Art" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
-      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
-      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
-      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
-      <img data-tags="Photography" src="https://via.placeholder.com/200x200.png" class="img-thumbnail item">
+      <div class="row gallery-row">
+        <div class="col-6 col-md-3">
+        <a class="thumbnail" data-toggle="modal" data-target="#myModal" data-title="This is my title" data-caption="Image caption bla bla bla" data-image="https://via.placeholder.com/600x800.png" data-target="#image-gallery">
+          <img data-tags="3D Art" src="https://via.placeholder.com/205x205.png" class="img-thumbnail item"></a></div>
+        <div class="col-6 col-md-3"><img data-tags="Photography" src="https://via.placeholder.com/205x205.png" class="img-thumbnail item"></div>
+        <div class="col-6 col-md-3"><img data-tags="Photography" src="https://via.placeholder.com/205x205.png" class="img-thumbnail item"></div>
+        <div class="col-6 col-md-3"><img data-tags="Photography" src="https://via.placeholder.com/205x205.png" class="img-thumbnail item"></div>
+        <div class="col-6 col-md-3"><img data-tags="Photography" src="https://via.placeholder.com/205x205.png" class="img-thumbnail item"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="image-gallery-title"></h4>
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+        </div>
+        <div class="modal-body">
+          <img id="image-gallery-image" class="img-fluid" src="">
+        </div>
+        <div class="modal-footer">
+          <div class="col-md-2">
+            <button type="button" class="btn btn-primary" id="show-previous-image">Previous</button>
+          </div>
+          <div class="col-md-8 text-justify" id="image-gallery-caption">
+            This text will be overwritten by jQuery
+          </div>
+          <div class="col-md-2">
+            <button type="button" id="show-next-image" class="btn btn-default">Next</button>
+          </div>
+        </div>
+        <hr />
+        <div id="disqus_thread" class="col-md-12"></div>
+        <script>
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://rosealacroix.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+        </script>
+      </div>
     </div>
   </div>
 </div>
