--- a/gallery/index.html
+++ b/gallery/index.html
@@ -59,19 +59,19 @@
       <h1 class="title-gallery">Gallery</h1>
       <div id="buttons"></div>
       <div class="row gallery-row">
-        <div class="col-6 col-md-3 item" data-tags="3D Art">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="This is my title 1" data-caption="Image caption 1" data-image="https://via.placeholder.com/600x800.png" data-target="#image-gallery">
-          <img src="https://via.placeholder.com/205x205.png" class="img-thumbnail"></a></div>
-
         <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="This is my title 2" data-caption="Image caption 2" data-image="https://via.placeholder.com/600x800.png" data-target="#image-gallery">
-          <img src="https://via.placeholder.com/205x205.png" class="img-thumbnail"></a></div>
-
-        <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="This is my title 3" data-caption="Image caption 3" data-image="https://via.placeholder.com/600x800.png" data-target="#image-gallery">
-          <img src="https://via.placeholder.com/205x205.png" class="img-thumbnail"></a></div>
+        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="A Swirly Friend" data-caption="A cute creature encountered last time I had a stroll down the beach." data-image="../assets/gallery/swirly-friend.jpg" data-target="#image-gallery">
+          <img src="../assets/gallery/swirly-friendt.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
+        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="His Best Side" data-caption="My griffin Nightwish from ARK: Survival Evolved." data-image="../assets/gallery/his-best-side.jpg" data-target="#image-gallery">
+          <img src="../assets/gallery/his-best-sidet.jpg" class="img-thumbnail"></a></div>
+
+        <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
+        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="First Flight" data-caption="Ho-Oh, one of my argentavis from ARK: Survival Evolved." data-image="../assets/gallery/first-flight.jpg" data-target="#image-gallery">
+          <img src="../assets/gallery/first-flightt.jpg" class="img-thumbnail"></a></div>
+
+        <div class="col-6 col-md-3 item" data-tags="Photography">
         <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="This is my title 4" data-caption="Image caption 4" data-image="https://via.placeholder.com/600x800.png" data-target="#image-gallery">
           <img src="https://via.placeholder.com/205x205.png" class="img-thumbnail"></a></div>
 
@@ -96,12 +96,13 @@
           <span class="fas fa-chevron-left carousel-control-prev" id="show-previous-image"></span>
           <img id="image-gallery-image" class="img-fluid" src="">
           <span class="fas fa-chevron-right carousel-control-next" id="show-next-image"></span>
-        </div>
-        <div class="modal-footer">
           <div class="col-md-12" id="image-gallery-caption">
             This text will be overwritten by jQuery
           </div>
+
         </div>
+
+        <div class="modal-footer">
         <hr />
         <div id="disqus_thread" class="col-md-12"></div>
         <script>
@@ -112,6 +113,7 @@
           (d.head || d.body).appendChild(s);
           })();
         </script>
+        </div>
       </div>
     </div>
   </div>
