Disqus works in gallery

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -60,15 +60,15 @@
       <div id="buttons"></div>
       <div class="row gallery-row">
         <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="A Swirly Friend" data-caption="A cute creature encountered last time I had a stroll down the beach." data-image="../assets/gallery/swirly-friend.jpg" data-target="#image-gallery">
+        <a class="thumbnail" onclick="loadDisqusForImage(1)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="A Swirly Friend" data-caption="A cute creature encountered last time I had a stroll down the beach." data-image="../assets/gallery/swirly-friend.jpg" data-target="#image-gallery">
           <img src="../assets/gallery/swirly-friendt.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="His Best Side" data-caption="My griffin Nightwish from ARK: Survival Evolved." data-image="../assets/gallery/his-best-side.jpg" data-target="#image-gallery">
+        <a class="thumbnail" onclick="loadDisqusForImage(2)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="His Best Side" data-caption="My griffin Nightwish from ARK: Survival Evolved." data-image="../assets/gallery/his-best-side.jpg" data-target="#image-gallery">
           <img src="../assets/gallery/his-best-sidet.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="First Flight" data-caption="Ho-Oh, one of my argentavis from ARK: Survival Evolved." data-image="../assets/gallery/first-flight.jpg" data-target="#image-gallery">
+        <a class="thumbnail" onclick="loadDisqusForImage(3)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="First Flight" data-caption="Ho-Oh, one of my argentavis from ARK: Survival Evolved." data-image="../assets/gallery/first-flight.jpg" data-target="#image-gallery">
           <img src="../assets/gallery/first-flightt.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Photography">
@@ -105,14 +105,6 @@
         <div class="modal-footer">
         <hr />
         <div id="disqus_thread" class="col-md-12"></div>
-        <script>
-          (function() { // DON'T EDIT BELOW THIS LINE
-          var d = document, s = d.createElement('script');
-          s.src = 'https://rosealacroix.disqus.com/embed.js';
-          s.setAttribute('data-timestamp', +new Date());
-          (d.head || d.body).appendChild(s);
-          })();
-        </script>
         </div>
       </div>
     </div>
