Gallery new images

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -64,20 +64,20 @@
           <img src="../assets/gallery/swirly-friendt.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
-        <a class="thumbnail" onclick="loadDisqusForImage(2)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="His Best Side" data-caption="My griffin Nightwish from ARK: Survival Evolved." data-image="../assets/gallery/his-best-side.jpg" data-target="#image-gallery">
-          <img src="../assets/gallery/his-best-sidet.jpg" class="img-thumbnail"></a></div>
+        <a class="thumbnail" onclick="loadDisqusForImage(2)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="His New Home" data-caption="My griffin Nightwish from ARK: Survival Evolved, right after transferring him from the Ragnarok map." data-image="../assets/gallery/his-new-home.jpg" data-target="#image-gallery">
+          <img src="../assets/gallery/his-new-homet.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
         <a class="thumbnail" onclick="loadDisqusForImage(3)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="First Flight" data-caption="Ho-Oh, one of my argentavis from ARK: Survival Evolved." data-image="../assets/gallery/first-flight.jpg" data-target="#image-gallery">
           <img src="../assets/gallery/first-flightt.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="This is my title 4" data-caption="Image caption 4" data-image="https://via.placeholder.com/600x800.png" data-target="#image-gallery">
-          <img src="https://via.placeholder.com/205x205.png" class="img-thumbnail"></a></div>
+        <a class="thumbnail" onclick="loadDisqusForImage(4)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="(Not) her Best Side" data-caption="The best picture I ever took of my cat, Gipsy. It really reflects her, um... intelligence." data-image="../assets/gallery/not-her-best-side.jpg" data-target="#image-gallery">
+          <img src="../assets/gallery/not-her-best-sidet.jpg" class="img-thumbnail"></a></div>
 
         <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="This is my title 5" data-caption="Image caption 5" data-image="https://via.placeholder.com/600x800.png" data-target="#image-gallery">
-          <img src="https://via.placeholder.com/205x205.png" class="img-thumbnail"></a></div>
+        <a class="thumbnail" onclick="loadDisqusForImage(5)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="Contemplation on Water" data-caption="Gipsy loves stagnating water on the balcony. When I water my outside plants, she rushes to drink and then contemplates life while she dips her paws in the newly created puddle." data-image="../assets/gallery/contemplation-on-water.jpg" data-target="#image-gallery">
+          <img src="../assets/gallery/contemplation-on-watert.jpg" class="img-thumbnail"></a></div>
 
       </div>
     </div>
