--- a/gallery/index.html
+++ b/gallery/index.html
@@ -94,9 +94,11 @@
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body">
-          <span class="col fas fa-chevron-left carousel-control-prev" id="show-previous-image"></span>
-          <img id="image-gallery-image" class="img-fluid" src="">
-          <span class="col fas fa-chevron-right carousel-control-next" id="show-next-image"></span>
+          <div class="img-area">
+            <span class="col fas fa-chevron-left carousel-control-prev" id="show-previous-image"></span>
+            <img id="image-gallery-image" class="img-fluid" src="">
+            <span class="col fas fa-chevron-right carousel-control-next" id="show-next-image"></span>
+          </div>
           <div class="col-md-12" id="image-gallery-caption">
             This text will be overwritten by jQuery
           </div>
