Discord contact added

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -115,10 +115,11 @@
 <!-- Footer -->
   <footer class="footer-content text-center">
     <div class="social-media">
-      <a target="_blank" class="fab fa-facebook-square" href="https://www.facebook.com/rosealacroix"></a>
-      <a target="_blank" class="fab fa-twitter-square" href="https://twitter.com/RoseALacroix"></a>
-      <a target="_blank" class="fab fa-tumblr-square" href="https://rose-writes-and-drinks-tea.tumblr.com/"></a>
-      <a target="_blank" class="fab fa-github-square" href="https://github.com/RoseReaper"></a>
+      <a target="_blank" class="fab fa-facebook" href="https://www.facebook.com/rosealacroix"></a>
+      <a target="_blank" class="fab fa-twitter" href="https://twitter.com/RoseALacroix"></a>
+      <a target="_blank" class="fab fa-tumblr" href="https://rose-writes-and-drinks-tea.tumblr.com/"></a>
+      <a target="_blank" class="fab fa-discord" data-toggle="popover" data-content="Rose A. Lacroix#2649"></a>
+      <a target="_blank" class="fab fa-github" href="https://github.com/RoseReaper"></a>
     <p>&copy; 2018 Rose A. Lacroix.</p>
   </footer>
 <!-- Footer -->
