--- a/about-me/index.html
+++ b/about-me/index.html
@@ -57,10 +57,10 @@
   <div class="row justify-content-center">
     <div class="col-12 col-md-11">
       <h1 class="title-about-me">Who I am</h1>
-      <img class="about-me-pic" src="https://via.placeholder.com/300x400.png">
-      <p>Rose Lacroix is the character of a dropped novel project from my teenage years. That name (or Rose Reaper on some platforms) eventually became how I call myself on the Internet.</p>
-      <p>I am a tea, lipstick addict and reluctant adult who went into programming, after spending five years as a hotel receptionist. I studied French, British, American litterature, English, and art. I used to draw, but I mostly do 3D renders and a bit of photography now. I'm currently developing programs with COBOL at work, and I'm curious to try other tools for my personal projects. So far I've used <b>HTML</b>, <b>CSS</b>, <b>Javascript</b>, <b>PHP</b>, <b>Ajax</b>, <b>MySQL</b>.</p>
-      <p>In my free time I like to write fiction, work on 3D scenes or models, and sew. I also procastinate a lot by watching series, browsing memes, cuddling with my cat, and daydreaming about writing (that's a big thing in writing circles, don't ask). I do my 3D renders in <b>DAZ Studio</b>, either with the Iray or Lux render. I use <b>Zbrush</b> to alter models, <b>Marvelous Designer</b> to create dynamic clothes, and <b>Photoshop</b> for texturing and post work.</p>
+      <img class="about-me-pic img-fluid" src="https://via.placeholder.com/300x400.png">
+      <p>Rose A. Lacroix is the character of a dropped novel project from my teenage years. That name (or Rose Reaper on some platforms) eventually became how I call myself over the Internet.</p>
+      <p>I am a tea, lipstick addict and reluctant adult who went into programming, after spending five years as a hotel receptionist. I studied French, British, American litterature, English, and art. I used to draw, but I mostly do 3D renders and a bit of photography now. I'm currently trained to develop programs with COBOL, and I'm curious to try other tools for my personal projects. So far I've used <b>HTML</b>, <b>CSS</b>, <b>Javascript</b>, <b>PHP</b>, <b>Ajax</b>, <b>MySQL</b>.</p>
+      <p>In my free time I like to write fiction, work on 3D scenes or models, and sew. I also procrastinate a lot by watching series, browsing memes, cuddling with my cat, and daydreaming. I do my 3D renders in <b>DAZ Studio</b>, either with the Iray or Lux render. I use <b>Zbrush</b> to alter models, <b>Marvelous Designer</b> to create dynamic clothes, and <b>Photoshop</b> for texturing and post work.</p>
     </div>
   </div>
 </div>
@@ -69,10 +69,11 @@
 <!-- Footer -->
   <footer class="footer-content text-center">
     <div class="social-media">
-      <a target="_blank" class="fab fa-facebook-square" href="https://www.facebook.com/rosealacroix"></a>
-      <a target="_blank" class="fab fa-twitter-square" href="https://twitter.com/RoseALacroix"></a>
-      <a target="_blank" class="fab fa-tumblr-square" href="https://rose-writes-and-drinks-tea.tumblr.com/"></a>
-      <a target="_blank" class="fab fa-github-square" href="https://github.com/RoseReaper"></a>
+      <a target="_blank" class="fab fa-facebook" href="https://www.facebook.com/rosealacroix"></a>
+      <a target="_blank" class="fab fa-twitter" href="https://twitter.com/RoseALacroix"></a>
+      <a target="_blank" class="fab fa-tumblr" href="https://rose-writes-and-drinks-tea.tumblr.com/"></a>
+      <a target="_blank" class="fab fa-discord" data-toggle="popover" data-content="Rose A. Lacroix#2649"></a>
+      <a target="_blank" class="fab fa-github" href="https://github.com/RoseReaper"></a>
     <p>&copy; 2018 Rose A. Lacroix.</p>
   </footer>
 <!-- Footer -->
