--- a/contact/index.html
+++ b/contact/index.html
@@ -68,7 +68,7 @@
         <input type="file" name="file" placeholder="">
         <input type="hidden" name="_after" value="https://rosealacroix.com/">
         <input type="hidden" name="_honeypot" value="">
-        <input type="hidden" name="_confirmation" value="The message has been successfully sent.">
+        <input type="hidden" name="_confirmation" value="Thank you for your message!">
         <input type="submit" name="submit" value="Submit" class="contact-button">
       </form>
     </div>
