--- a/contact/index.html
+++ b/contact/index.html
@@ -56,7 +56,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-11">
-      <form class="contact-form" action="https://mailthis.to/RoseALacroix" method="POST" encType="multipart/form-data">
+      <form class="contact-form" action="https://mailthis.to/rosewrites@hotmail.com" method="POST" encType="multipart/form-data">
         <h1 class="title-contact">Contact Form</h1>
         <label for="name"><i class="fas fa-user"></i> Name:</label>
         <input type="text" name="name" placeholder="Your name" required>
