--- a/contact/index.html
+++ b/contact/index.html
@@ -56,7 +56,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-11">
-      <form class="contact-form" action="https://mailthis.to/RoseALacroix" method="POST" encType="multipart/form-data">
+      <form class="contact-form" action="https://mailthis.to/rosealacroix" method="POST" encType="multipart/form-data">
         <h1 class="title-contact">Contact Form</h1>
         <label for="name"><i class="fas fa-user"></i> Name:</label>
         <input type="text" name="name" placeholder="Your name" required>
@@ -66,7 +66,7 @@
         <textarea name="message" placeholder="Enter your message here" style="height:90px" required></textarea>
         <label for="attachment"><i class="fas fa-paperclip"></i> Attachment (optional)</label>
         <input type="file" name="file" placeholder="">
-        <input type="hidden" name="_subject" value="Contact form submitted">
+        <input type="hidden" name="_subject" value="You have a new message">
         <input type="hidden" name="_after" value="https://rosealacroix.com/">
         <input type="hidden" name="_honeypot" value="">
         <input type="hidden" name="_confirmation" value="Thank you for your message!">
