Metadata + about-me edits

--- a/contact/index.html
+++ b/contact/index.html
@@ -7,14 +7,13 @@
     <title>Rose A. Lacroix</title>
 
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist.">
-      <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Luxrender,Reality,Marvelous Designer,The Aroostook Witch">
-      <meta name="author" content="Rose A. Lacroix">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist." />
+      <meta name="author" content="Rose A. Lacroix" />
       <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-      <link rel="stylesheet" href="../styles/style.css"/>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+      <link rel="stylesheet" href="../styles/style.css" />
 
   </head>
 
@@ -29,52 +28,52 @@
 <!-- Banner -->
 
 <!-- Navbar -->
-<div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
-  <ul class="nav-fill">
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ul>
-</div>
+  <div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
+    <ul class="nav-fill">
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ul>
+  </div>
 
-<nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
-  <header>Menu<span>x</span></header>
-  <ol>
-    <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ol>
-  <footer><button aria-label="Toggle Menu">Toggle</button></footer>
-</nav>
+  <nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
+    <header>Menu<span>x</span></header>
+    <ol>
+      <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ol>
+    <footer><button aria-label="Toggle Menu">Toggle</button></footer>
+  </nav>
 <!-- Navbar -->
 
 <!-- Contact form -->
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-11">
-      <form class="contact-form" action="https://mailthis.to/rosealacroix" method="POST" encType="multipart/form-data">
-        <h1 class="title-contact">Contact Form</h1>
-        <label for="name"><i class="fas fa-user"></i> Name:</label>
-        <input type="text" name="name" placeholder="Your name" required>
-        <label for="email"><i class="fas fa-envelope"></i> Email:</label>
-        <input type="email" name="_replyto" placeholder="you@mail.com" required>
-        <label for="message"><i class="fas fa-comments"></i> Your message:</label>
-        <textarea name="message" placeholder="Enter your message here" style="height:90px" required></textarea>
-        <label for="attachment"><i class="fas fa-paperclip"></i> Attachment (optional)</label>
-        <input type="file" name="file" placeholder="">
-        <input type="hidden" name="_subject" value="You have a new message">
-        <input type="hidden" name="_after" value="https://rosealacroix.com/">
-        <input type="hidden" name="_honeypot" value="">
-        <input type="hidden" name="_confirmation" value="Thank you for your message!">
-        <input type="submit" value="Submit" class="contact-button">
-      </form>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-11">
+        <form class="contact-form" action="https://mailthis.to/rosealacroix" method="POST" encType="multipart/form-data">
+          <h1 class="title-contact">Contact Form</h1>
+          <label for="name"><i class="fas fa-user"></i> Name:</label>
+          <input type="text" name="name" placeholder="Your name" required>
+          <label for="email"><i class="fas fa-envelope"></i> Email:</label>
+          <input type="email" name="_replyto" placeholder="you@mail.com" required>
+          <label for="message"><i class="fas fa-comments"></i> Your message:</label>
+          <textarea name="message" placeholder="Enter your message here" style="height:90px" required></textarea>
+          <label for="attachment"><i class="fas fa-paperclip"></i> Attachment (optional)</label>
+          <input type="file" name="file" placeholder="">
+          <input type="hidden" name="_subject" value="You have a new message">
+          <input type="hidden" name="_after" value="https://rosealacroix.com/">
+          <input type="hidden" name="_honeypot" value="">
+          <input type="hidden" name="_confirmation" value="Thank you for your message!">
+          <input type="submit" value="Submit" class="contact-button">
+        </form>
+      </div>
     </div>
   </div>
-</div>
 <!-- Contact form -->
 
 <!-- Footer -->
