--- a/about-me/index.html
+++ b/about-me/index.html
@@ -7,14 +7,13 @@
     <title>Rose A. Lacroix</title>
 
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist.">
-      <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Luxrender,Reality,Marvelous Designer,The Aroostook Witch">
-      <meta name="author" content="Rose A. Lacroix">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist." />
+      <meta name="author" content="Rose A. Lacroix" />
       <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-      <link rel="stylesheet" href="../styles/style.css"/>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+      <link rel="stylesheet" href="../styles/style.css" />
 
   </head>
 
@@ -29,41 +28,41 @@
 <!-- Banner -->
 
 <!-- Navbar -->
-<div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
-  <ul class="nav-fill">
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ul>
-</div>
+  <div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
+    <ul class="nav-fill">
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ul>
+  </div>
 
-<nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
-  <header>Menu<span>x</span></header>
-  <ol>
-    <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ol>
-  <footer><button aria-label="Toggle Menu">Toggle</button></footer>
-</nav>
+  <nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
+    <header>Menu<span>x</span></header>
+    <ol>
+      <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ol>
+    <footer><button aria-label="Toggle Menu">Toggle</button></footer>
+  </nav>
 <!-- Navbar -->
 
 <!-- About me -->
-<div class="container about-me">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-11">
-      <h1 class="title-about-me">Who I am</h1>
-      <img class="about-me-pic img-fluid" src="https://via.placeholder.com/300x400.png">
-      <p>Rose A. Lacroix is the character of a dropped novel project from my teenage years. That name (or Rose Reaper on some platforms) eventually became how I call myself over the Internet.</p>
-      <p>I am a tea, lipstick addict and reluctant adult who went into programming, after spending five years as a hotel receptionist. I studied French, British, American litterature, English, and art. I used to draw, but I mostly do 3D renders and a bit of photography now. I'm currently trained to develop programs with COBOL, and I'm curious to try other tools for my personal projects. So far I've used <b>HTML</b>, <b>CSS</b>, <b>Javascript</b>, <b>PHP</b>, <b>Ajax</b>, <b>MySQL</b>.</p>
-      <p>In my free time I like to write fiction, work on 3D scenes or models, and sew. I also procrastinate a lot by watching series, browsing memes, cuddling with my cat, and daydreaming. I do my 3D renders in <b>DAZ Studio</b>, either with the Iray or Lux render. I use <b>Zbrush</b> to alter models, <b>Marvelous Designer</b> to create dynamic clothes, and <b>Photoshop</b> for texturing and post work.</p>
+  <div class="container about-me">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-11">
+        <h1 class="title-about-me">Who I am</h1>
+        <img class="about-me-pic img-fluid" src="../assets/images/about-me.jpg">
+        <p>Rose A. Lacroix is the character of a dropped novel project from my teenage years. That name (or Rose Reaper on some platforms) eventually became how I call myself over the Internet. My real name is Elodie Changey, which would suck on a book cover in my opinion.</p>
+        <p>I am a tea, lipstick addict and reluctant adult who went into programming, after spending five years as a hotel receptionist (which is a terrible idea when you're an introverted goblin like me). I studied French, British, American litterature, English, and art. I used to draw, but I mostly do 3D renders and a bit of photography now. I'm currently trained to develop programs with COBOL, and I'm curious to try other tools for my personal projects. So far I've used <b>HTML</b>, <b>CSS</b>, <b>Javascript</b>, <b>PHP</b>, <b>Ajax</b>, <b>MySQL</b>.</p>
+        <p>In my free time I like to write fiction, work on 3D scenes or models, and sew. I also procrastinate a lot by watching series, browsing memes, cuddling with my cat, and daydreaming. I do my 3D renders in <b>DAZ Studio</b>, either with the Iray or Lux render. I use <b>Zbrush</b> to alter models, <b>Marvelous Designer</b> to create dynamic clothes, and <b>Photoshop</b> for texturing and post work.</p>
+      </div>
     </div>
   </div>
-</div>
 <!-- About me -->
 
 <!-- Footer -->
