--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,14 +7,13 @@
     <title>Rose A. Lacroix</title>
 
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist.">
-      <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Luxrender,Reality,Marvelous Designer,The Aroostook Witch">
-      <meta name="author" content="Rose A. Lacroix">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist." />
+      <meta name="author" content="Rose A. Lacroix" />
       <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-      <link rel="stylesheet" href="../styles/style.css"/>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+      <link rel="stylesheet" href="../styles/style.css" />
 
   </head>
 
@@ -29,87 +28,87 @@
 <!-- Banner -->
 
 <!-- Navbar -->
-<div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
-  <ul class="nav-fill">
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ul>
-</div>
+  <div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
+    <ul class="nav-fill">
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ul>
+  </div>
 
-<nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
-  <header>Menu<span>x</span></header>
-  <ol>
-    <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ol>
-  <footer><button aria-label="Toggle Menu">Toggle</button></footer>
-</nav>
+  <nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
+    <header>Menu<span>x</span></header>
+    <ol>
+      <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ol>
+    <footer><button aria-label="Toggle Menu">Toggle</button></footer>
+  </nav>
 <!-- Navbar -->
 
 <!-- Gallery -->
-<div class="container gallery item-list">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-11">
-      <h1 class="title-gallery">Gallery</h1>
-      <div id="buttons"></div>
-      <div class="row gallery-row">
+  <div class="container gallery item-list">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-11">
+        <h1 class="title-gallery">Gallery</h1>
+        <div id="buttons"></div>
+        <div class="row gallery-row">
 
-        <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" onclick="loadDisqusForImage(1)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="A Swirly Friend" data-caption="A cute creature encountered last time I had a stroll down the beach." data-image="../assets/gallery/swirly-friend.jpg" data-target="#image-gallery">
-          <img src="../assets/gallery/swirly-friendt.jpg" class="img-thumbnail"></a></div>
+          <div class="col-6 col-md-3 item" data-tags="Photography">
+          <a class="thumbnail" onclick="loadDisqusForImage(1)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="A Swirly Friend" data-caption="A cute creature encountered last time I had a stroll down the beach." data-image="../assets/gallery/swirly-friend.jpg" data-target="#image-gallery">
+            <img src="../assets/gallery/swirly-friendt.jpg" class="img-thumbnail"></a></div>
 
-        <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
-        <a class="thumbnail" onclick="loadDisqusForImage(2)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="His New Home" data-caption="My griffin Nightwish from ARK: Survival Evolved, right after transferring him from the Ragnarok map." data-image="../assets/gallery/his-new-home.jpg" data-target="#image-gallery">
-          <img src="../assets/gallery/his-new-homet.jpg" class="img-thumbnail"></a></div>
+          <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
+          <a class="thumbnail" onclick="loadDisqusForImage(2)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="His New Home" data-caption="My griffin Nightwish from ARK: Survival Evolved, right after transferring him from the Ragnarok map." data-image="../assets/gallery/his-new-home.jpg" data-target="#image-gallery">
+            <img src="../assets/gallery/his-new-homet.jpg" class="img-thumbnail"></a></div>
 
-        <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
-        <a class="thumbnail" onclick="loadDisqusForImage(3)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="First Flight" data-caption="Ho-Oh, one of my argentavis from ARK: Survival Evolved." data-image="../assets/gallery/first-flight.jpg" data-target="#image-gallery">
-          <img src="../assets/gallery/first-flightt.jpg" class="img-thumbnail"></a></div>
+          <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
+          <a class="thumbnail" onclick="loadDisqusForImage(3)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="First Flight" data-caption="Ho-Oh, one of my argentavis from ARK: Survival Evolved." data-image="../assets/gallery/first-flight.jpg" data-target="#image-gallery">
+            <img src="../assets/gallery/first-flightt.jpg" class="img-thumbnail"></a></div>
 
-        <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" onclick="loadDisqusForImage(4)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="(Not) her Best Side" data-caption="The best picture I ever took of my cat, Gipsy. It really reflects her, um... intelligence." data-image="../assets/gallery/not-her-best-side.jpg" data-target="#image-gallery">
-          <img src="../assets/gallery/not-her-best-sidet.jpg" class="img-thumbnail"></a></div>
+          <div class="col-6 col-md-3 item" data-tags="Photography">
+          <a class="thumbnail" onclick="loadDisqusForImage(4)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="(Not) her Best Side" data-caption="The best picture I ever took of my cat, Gipsy. It really reflects her, um... intelligence." data-image="../assets/gallery/not-her-best-side.jpg" data-target="#image-gallery">
+            <img src="../assets/gallery/not-her-best-sidet.jpg" class="img-thumbnail"></a></div>
 
-        <div class="col-6 col-md-3 item" data-tags="Photography">
-        <a class="thumbnail" onclick="loadDisqusForImage(5)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="Contemplation on Water" data-caption="Gipsy loves stagnating water on the balcony. When I water my outside plants, she rushes to drink and then contemplates life while she dips her paws in the newly created puddle." data-image="../assets/gallery/contemplation-on-water.jpg" data-target="#image-gallery">
-          <img src="../assets/gallery/contemplation-on-watert.jpg" class="img-thumbnail"></a></div>
+          <div class="col-6 col-md-3 item" data-tags="Photography">
+          <a class="thumbnail" onclick="loadDisqusForImage(5)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="Contemplation on Water" data-caption="Gipsy loves stagnating water on the balcony. When I water my outside plants, she rushes to drink and then contemplates life while she dips her paws in the newly created puddle." data-image="../assets/gallery/contemplation-on-water.jpg" data-target="#image-gallery">
+            <img src="../assets/gallery/contemplation-on-watert.jpg" class="img-thumbnail"></a></div>
 
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title" id="image-gallery-title"></h4>
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-        </div>
-        <div class="modal-body">
-          <div class="img-area">
-            <span class="col fas fa-chevron-left carousel-control-prev" id="show-previous-image"></span>
-            <img id="image-gallery-image" class="img-fluid" src="">
-            <span class="col fas fa-chevron-right carousel-control-next" id="show-next-image"></span>
-          </div>
-          <div class="col-md-12" id="image-gallery-caption">
-            This text will be overwritten by jQuery
-          </div>
-        </div>
-        <div class="modal-footer">
-        <div id="disqus_thread" class="col-md-12"></div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+  <div class="container">
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="image-gallery-title"></h4>
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+          </div>
+          <div class="modal-body">
+            <div class="img-area">
+              <span class="col fas fa-chevron-left carousel-control-prev" id="show-previous-image"></span>
+              <img id="image-gallery-image" class="img-fluid" src="">
+              <span class="col fas fa-chevron-right carousel-control-next" id="show-next-image"></span>
+            </div>
+            <div class="col-md-12" id="image-gallery-caption">
+              This text will be overwritten by jQuery
+            </div>
+          </div>
+          <div class="modal-footer">
+          <div id="disqus_thread" class="col-md-12"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- Gallery -->
 
 <!-- Footer -->
