--- a/projects/index.html
+++ b/projects/index.html
@@ -7,14 +7,13 @@
     <title>Rose A. Lacroix</title>
 
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist.">
-      <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Luxrender,Reality,Marvelous Designer,The Aroostook Witch">
-      <meta name="author" content="Rose A. Lacroix">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist." />
+      <meta name="author" content="Rose A. Lacroix" />
       <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-      <link rel="stylesheet" href="../styles/style.css"/>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+      <link rel="stylesheet" href="../styles/style.css" />
 
   </head>
 
@@ -29,99 +28,99 @@
 <!-- Banner -->
 
 <!-- Navbar -->
-<div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
-  <ul class="nav-fill">
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ul>
-</div>
+  <div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
+    <ul class="nav-fill">
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ul>
+  </div>
 
-<nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
-  <header>Menu<span>x</span></header>
-  <ol>
-    <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
-    <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
-  </ol>
-  <footer><button aria-label="Toggle Menu">Toggle</button></footer>
-</nav>
+  <nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
+    <header>Menu<span>x</span></header>
+    <ol>
+      <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
+      <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
+    </ol>
+    <footer><button aria-label="Toggle Menu">Toggle</button></footer>
+  </nav>
 <!-- Navbar -->
 
 <!-- Project list -->
-<div class="container project-list item-list">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-11">
-      <h1 class="title-projects">My Projects</h1>
-      <div id="buttons"></div>
-      <div class="row projects-row">
-        <div class="col-12 col-md-4 project item" data-tags="Work in progress,Writing">
-          <div class="card">
-            <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
-            <div class="card-body">
-              <h5 class="card-title"><a href="#">The Aroostook Witch</a></h5>
-              <p class="card-text">A Dark contemporary fantasy novel series about Astrid Reynarsdóttir, an Icelandic widow with occult powers, who solves strange cases in North Maine.</p>
+  <div class="container project-list item-list">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-11">
+        <h1 class="title-projects">My Projects</h1>
+        <div id="buttons"></div>
+        <div class="row projects-row">
+          <div class="col-12 col-md-4 project item" data-tags="Work in progress,Writing">
+            <div class="card">
+              <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
+              <div class="card-body">
+                <h5 class="card-title"><a href="#">The Aroostook Witch</a></h5>
+                <p class="card-text">A Dark contemporary fantasy novel series about Astrid Reynarsdóttir, an Icelandic widow with occult powers, who solves strange cases in North Maine.</p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-12 col-md-4 project item" data-tags="Work in progress,Coding">
-          <div class="card">
-            <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
-            <div class="card-body">
-              <h5 class="card-title"><a href="#">Shiny TSV</a></h5>
-              <p class="card-text">App project for "3DS in Bordeaux". Matches TSV from Pokemon players and ESV from generated Pokemon eggs, in order to easily distribute shiny Pokemon eggs.</p>
+          <div class="col-12 col-md-4 project item" data-tags="Work in progress,Coding">
+            <div class="card">
+              <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
+              <div class="card-body">
+                <h5 class="card-title"><a href="#">Shiny TSV</a></h5>
+                <p class="card-text">App project for "3DS in Bordeaux". Matches TSV from Pokemon players and ESV from generated Pokemon eggs, in order to easily distribute shiny Pokemon eggs.</p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- <div class="col-12 col-md-4 project" data-tags="Writing">
-          <div class="card">
-            <img class="card-img-top" src=".../100px180/">
-            <div class="card-body">
-              <h5 class="card-title"><a href="#">Project 3</a></h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <!-- <div class="col-12 col-md-4 project" data-tags="Writing">
+            <div class="card">
+              <img class="card-img-top" src=".../100px180/">
+              <div class="card-body">
+                <h5 class="card-title"><a href="#">Project 3</a></h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-12 col-md-4 project" data-tags="3D Model">
-          <div class="card">
-            <img class="card-img-top" src=".../100px180/">
-            <div class="card-body">
-              <h5 class="card-title"><a href="#">Project 4</a></h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="col-12 col-md-4 project" data-tags="3D Model">
+            <div class="card">
+              <img class="card-img-top" src=".../100px180/">
+              <div class="card-body">
+                <h5 class="card-title"><a href="#">Project 4</a></h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-12 col-md-4 project" data-tags="Coding">
-          <div class="card">
-            <img class="card-img-top" src=".../100px180/">
-            <div class="card-body">
-              <h5 class="card-title"><a href="#">Project 5</a></h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="col-12 col-md-4 project" data-tags="Coding">
+            <div class="card">
+              <img class="card-img-top" src=".../100px180/">
+              <div class="card-body">
+                <h5 class="card-title"><a href="#">Project 5</a></h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-12 col-md-4 project" data-tags="Writing">
-          <div class="card">
-            <img class="card-img-top" src=".../100px180/">
-            <div class="card-body">
-              <h5 class="card-title"><a href="#">Project 6</a></h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="col-12 col-md-4 project" data-tags="Writing">
+            <div class="card">
+              <img class="card-img-top" src=".../100px180/">
+              <div class="card-body">
+                <h5 class="card-title"><a href="#">Project 6</a></h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
-          </div>
-        </div> -->
+          </div> -->
+        </div>
       </div>
     </div>
   </div>
-</div>
 <!-- Project list -->
 
 <!-- Footer -->
