Fixed gallery img + favicon

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -60,7 +60,7 @@
         <div class="row gallery-row">
 
           <div class="col-6 col-md-3 item" data-tags="Photography">
-          <a class="thumbnail" onclick="loadDisqusForImage(1)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="A Swirly Friend" data-caption="A cute creature encountered last time I had a stroll down the beach." data-image="../assets/gallery/swirly-friend.jpg" data-target="#image-gallery">
+          <a class="thumbnail" onclick="loadDisqusForImage(1)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="A Swirly Friend" data-caption="A cute creature encountered last time I had a stroll down the beach." data-image="../assets/gallery/swirly-friend.JPG" data-target="#image-gallery">
             <img src="../assets/gallery/swirly-friendt.jpg" class="img-thumbnail"></a></div>
 
           <div class="col-6 col-md-3 item" data-tags="Game Screenshot">
