--- a/about-me/index.html
+++ b/about-me/index.html
@@ -8,7 +8,7 @@
 
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist." />
+      <meta name="description" content="Website of Rose A. Lacroix: developer, writer, artist. Home of coding and novel projects, 3D renders, photography and more." />
       <meta name="author" content="Rose A. Lacroix" />
       <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
@@ -56,7 +56,7 @@
     <div class="row justify-content-center">
       <div class="col-12 col-md-11">
         <h1 class="title-about-me">Who I am</h1>
-        <img class="about-me-pic img-fluid" src="../assets/images/about-me.jpg">
+        <img class="about-me-pic img-fluid" src="../assets/images/rose-a-lacroix-about-me.jpg">
         <p>Rose A. Lacroix is the character of a dropped novel project from my teenage years. That name (or Rose Reaper on some platforms) eventually became how I call myself over the Internet. My real name is Elodie Changey, which would suck on a book cover in my opinion.</p>
         <p>I am a tea, lipstick addict and reluctant adult who went into programming, after spending five years as a hotel receptionist (which is a terrible idea when you're an introverted goblin like me). I studied French, British, American litterature, English, and art. I used to draw, but I mostly do 3D renders and a bit of photography now. I'm currently trained to develop programs with COBOL, and I'm curious to try other tools for my personal projects. So far I've used <b>HTML</b>, <b>CSS</b>, <b>Javascript</b>, <b>PHP</b>, <b>Ajax</b>, <b>MySQL</b>.</p>
         <p>In my free time I like to write fiction, work on 3D scenes or models, and sew. I also procrastinate a lot by watching series, browsing memes, cuddling with my cat, and daydreaming. I do my 3D renders in <b>DAZ Studio</b>, either with the Iray or Lux render. I use <b>Zbrush</b> to alter models, <b>Marvelous Designer</b> to create dynamic clothes, and <b>Photoshop</b> for texturing and post work.</p>
