--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,7 +8,7 @@
 
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-      <meta name="description" content="Website of Rose A. Lacroix. Developer, writer, artist." />
+      <meta name="description" content="Website of Rose A. Lacroix: developer, writer, artist. Home of coding and novel projects, 3D renders, photography and more." />
       <meta name="author" content="Rose A. Lacroix" />
       <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
