Project thumbnails updated + latest updates removed

--- a/projects/index.html
+++ b/projects/index.html
@@ -60,20 +60,18 @@
         <div class="row projects-row">
           <div class="col-12 col-md-4 project item" data-tags="Work in progress,Writing">
             <div class="card">
-              <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
+              <img class="card-img-top" src="../assets/projects/prey-for-the-godst.jpg">
               <div class="card-body">
-                <h5 class="card-title"><a href="#">The Aroostook Witch</a></h5>
-                <p class="card-text">A Dark contemporary fantasy novel series about Astrid Reynarsdóttir, an Icelandic widow with occult powers, who solves strange cases in North Maine.</p>
+                <h5 class="card-title"><a href="#">Prey For The Gods</a></h5>
               </div>
             </div>
           </div>
 
           <div class="col-12 col-md-4 project item" data-tags="Work in progress,Coding">
             <div class="card">
-              <img class="card-img-top" src="https://via.placeholder.com/295x295.png">
+              <img class="card-img-top" src="../assets/projects/shiny-tsvt.jpg">
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Shiny TSV</a></h5>
-                <p class="card-text">App project for "3DS in Bordeaux". Matches TSV from Pokemon players and ESV from generated Pokemon eggs, in order to easily distribute shiny Pokemon eggs.</p>
               </div>
             </div>
           </div>
