--- a/index.html
+++ b/index.html
@@ -54,39 +54,14 @@
 <!-- Welcome section -->
   <div class="container welcome-section">
     <div class="row justify-content-center">
-      <div class="col-10 col-md-6 welcome-left">
+      <div class="col-12 col-md-11 welcome-left">
         <h1 class="handwritten-title">Welcome</h1>
         <h2 class="welcome-title">to my online Portfolio</h2>
         <p>My name is <b>Rose</b>, and I'm a French <b>developer</b>, <b>writer</b> and <b>artist</b>. </br>
         I share my work here. You can expect to find several projects, each of a different nature. Feel free to reach out if you have a question, or a suggestion about my content.</p>
         <a class="welcome-readmore" href="/about-me/">Read more about me</a>
         <img class="welcome-left-corner d-none d-lg-block d-xl-block" src="assets/images/corner.png">
-      </div>
-      <div class="col-10 col-md-4 welcome-right">
-        <h1 class="latest-projects handwritten-title">Latest Projects</h1>
-        <img class="welcome-right-corner d-none d-lg-block d-xl-block" src="assets/images/corner.png">
-        <div class="row home-project-list justify-content-center">
-          <div class="col-3 img-project">
-            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=1"></a>
-          </div>
-          <div class="col-3 img-project">
-            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=2"></a>
-          </div>
-          <div class="col-3 img-project">
-            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=3"></a>
-          </div>
-        </div>
-        <div class="row home-project-list justify-content-center">
-          <div class="col-3 img-project">
-            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=4"></a>
-          </div>
-          <div class="col-3 img-project">
-            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=5"></a>
-          </div>
-          <div class="col-3 img-project">
-            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=6"></a>
-          </div>
-        </div>
+        <img class="welcome-right-corner d-none d-lg-block d-xl-block" src="assets/images/corner2.png">
       </div>
     </div>
   </div>
