Contact page redone

--- a/contact/index.html
+++ b/contact/index.html
@@ -52,25 +52,14 @@
 <!-- Navbar -->
 
 <!-- Contact form -->
-  <div class="container">
+  <div class="container contact-form">
     <div class="row justify-content-center">
       <div class="col-12 col-md-11">
-        <form class="contact-form" action="https://mailthis.to/rosealacroix" method="POST" encType="multipart/form-data">
-          <h1 class="title-contact">Contact Form</h1>
-          <label for="name"><i class="fas fa-user"></i> Name:</label>
-          <input type="text" name="name" placeholder="Your name" required>
-          <label for="email"><i class="fas fa-envelope"></i> Email:</label>
-          <input type="email" name="_replyto" placeholder="you@mail.com" required>
-          <label for="message"><i class="fas fa-comments"></i> Your message:</label>
-          <textarea name="message" placeholder="Enter your message here" style="height:90px" required></textarea>
-          <label for="attachment"><i class="fas fa-paperclip"></i> Attachment (optional)</label>
-          <input type="file" name="file" placeholder="">
-          <input type="hidden" name="_subject" value="You have a new message">
-          <input type="hidden" name="_after" value="https://rosealacroix.com/">
-          <input type="hidden" name="_honeypot" value="">
-          <input type="hidden" name="_confirmation" value="Thank you for your message!">
-          <input type="submit" value="Submit" class="contact-button">
-        </form>
+        <h1 class="title-contact">How to contact me</h1>
+        <p><i class="fas fa-check"></i> You can send an email to <a href="mailto:contact@rosealacroix.com" target="_top">contact@rosealacroix.com</a>.</br>
+        <i class="fas fa-check"></i> Do you like <a target="_blank" href="https://www.facebook.com/rosealacroix">Facebook</a> and <a target="_blank" href="https://twitter.com/RoseALacroix">Twitter</a>? I don't, but you can still contact me through these.</br>
+        <i class="fas fa-check"></i> I reblog so many things that trying to find something on my <a target="_blank" href="https://rose-writes-and-drinks-tea.tumblr.com/">Tumblr</a> is like dumpster diving. I use tags to keep it organised, and a lot of my inspiration comes from there.</br>
+        <i class="fas fa-check"></i> I have Discord all the time with me. Probably the quickest way to get my attention, especially if you're fluent in gif reactions. My username is <b>Rose A. Lacroix#2649</b>.<p>
       </div>
     </div>
   </div>
