--- a/projects/Prey For The Gods/prey-for-the-gods.html
+++ b/projects/Prey For The Gods/prey-for-the-gods.html
@@ -50,6 +50,8 @@
     <footer><button aria-label="Toggle Menu">Toggle</button></footer>
   </nav>
 <!-- Navbar -->
+
+<!-- Project body -->
 <div class="container project-body">
   <div class="row justify-content-center">
     <div class="col-12 col-md-11">
@@ -60,7 +62,9 @@
       <p>Prey For The Gods is the first book of <b>The Aroostook Witch</b> series.</p>
 
       <p>Detective Grace Nichols isn't looking forward to start her new job at the Presque Isle Police Department. The city in itself doesn't look bad, mind you, albeit a little isolated. But its surroundings full of magic, as part of the untamed countryside of North Maine, are just a call for trouble that city people are not used to.</br>
-      But there's no time to brood,
+      A missing person case doesn't leave her the time to adjust, and brings her right into action.
+
+      But there's no time to brood, as her first case will introduce her to a Singular for a work partner, and a secluded witch who often serves as a consultant.
       A missing person case ***, and they will need all the help they can get.
 
       </p>
@@ -68,7 +72,11 @@
       <p>Main characters
 
       Astrid Reynarsdóttir
+      Astrid leads a secluded life in Eagle Lake. Her reputation as a witch is well established and trusted, but the side effects of her presence make most people avoid her. 
+
       Nathaniel Sharpe
+
+
       Grace Nichols
       Connor Woo
       Charlie Reid</p>
@@ -76,8 +84,6 @@
     </div>
   </div>
 </div>
-<!-- Project body -->
-
 <!-- Project body -->
 
 <!-- Footer -->
