New gallery image

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -79,6 +79,10 @@
           <a class="thumbnail" onclick="loadDisqusForImage(5)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="Contemplation on Water" data-caption="Gipsy loves stagnating water on the balcony. When I water my outside plants, she rushes to drink and then contemplates life while she dips her paws in the newly created puddle." data-image="../assets/gallery/contemplation-on-water.jpg" data-target="#image-gallery">
             <img src="../assets/gallery/contemplation-on-watert.jpg" class="img-thumbnail"></a></div>
 
+          <div class="col-6 col-md-3 item" data-tags="3D Art">
+          <a class="thumbnail" onclick="loadDisqusForImage(6)" data-image-id="" data-toggle="modal" data-target="#myModal" data-title="The Quiet of the Stream" data-caption="First Iray render made with the main character of my novel project The Aroostook Witch. I made her dress in Marvelous Designer, based on a Gunne Sax dress. The astonishing scene is Willow Creek by Stonemason." data-image="../assets/gallery/the-quiet-of-the-stream.jpg" data-target="#image-gallery">
+            <img src="../assets/gallery/the-quiet-of-the-streamt.jpg" class="img-thumbnail"></a></div>
+
         </div>
       </div>
     </div>
